[package]
name = "remote_config_modifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
colored = "2.0.0"
eyre = "0.6.8"
reqwest = { version = "0.11.10", features = ["rustls-tls", "gzip"] }
rustls = "0.20.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.80"
tokio = { version ="1.18.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version ="0.3.11", features = ["env-filter"] }
webbrowser = "0.7.1"
yup-oauth2 = "6.6.0"
