[package]
name = "rcm"
authors = ["Dmitrii Andriianov <no_war@fastmail.com>"]
description = """
rcm is a comand-line tool to modify Firebase remote config.
"""
repository = "https://github.com/andriyanovDS/RemoteConfigModifier"
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
clap = { version = "3.1.15", features = ["derive"] }
color-eyre = "0.6.1"
colored = "2.0.0"
directories-next = "2.0.0"
enum-iterator = "0.8.1"
eyre = "0.6.8"
reqwest = { version = "0.11.10", features = ["rustls-tls", "gzip"] }
rustls = "0.20.4"
rustyline = "9.1.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.80"
spinners = "4.0.0"
term-table = "1.3.2"
terminal-menu = "2.0.3"
tokio = { version ="1.18.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version ="0.3.11", features = ["env-filter"] }
webbrowser = "0.7.1"
yup-oauth2 = "6.6.0"

[dev-dependencies]
mockall = "0.11.1"
